--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'good morning, jenn.  ';
+        greet = 'good morning, jenn  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon, jenn. ';
+        greet = 'good afternoon, jenn ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'good evening, jenn.  ';
+        greet = 'good evening, jenn  ';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
