--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         display: flex;
         font-family: sans-serif;
         font-size: 18pt;
-        color: #fcc475;
+        color: #efcd52;
         padding: 5px;
         border: 1px solid #ffffff;
         justify-content: left;
